# Runtime-Recompiled-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Getting started.docx  LICENSE  README.md  ReadMe.txt
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  ConfigDirectories.h  Core.cpp  Core.vcxproj  ExportDetails.h  ForwardDecl.h  Handle.h  Level.cpp  Level.h  Logger.cpp  Logger.h  LoggerException.h  Object.cpp  Object.h  PlatformDetails.h  Script.cpp  Script.h  ScriptCompiler.cpp  ScriptCompiler.h  ScriptLoader.cpp  ScriptLoader.h  Storage.cpp  Storage.h  dllmain.cpp  stdafx.h  targetver.h
Engine/Main/: CMakeLists.txt  Main.sln  Main.vcxproj  main.cpp
Engine/PIL/: CMakeLists.txt  FileSystem.h  FunctionDefinition.h  NoopFunctions.h  Process.h  ProcessFunctions.h  RunPython.cpp  RunPython.h  SharedLibrary.cpp  SharedLibrary.h  SizeT.h
Engine/PluginCore/: CMakeLists.txt  ExportDetails.h  PluginBase.cpp  PluginBase.h  PluginCore.vcxproj  PluginLoader.cpp  PluginLoader.h
Engine/Plugins/: CMakeLists.txt  CmakeLists.txt
Engine/Plugins/Audio/: Audio.vcxproj  AudioComponent.cpp  AudioComponent.h  AudioPlugin.cpp  AudioPlugin.h  CMakeLists.txt  ExportDetails.h
Engine/Plugins/Input/: CMakeLists.txt  ExportDetails.h  Input.vcxproj  InputComponent.cpp  InputComponent.h  InputPlugin.cpp  InputPlugin.h
Engine/Plugins/Physics/: CMakeLists.txt  ContactListener.cpp  ContactListener.h  ExportDetails.h  Physics.vcxproj  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsPlugin.cpp  PhysicsPlugin.h  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
Engine/Plugins/Rendering/: AnimatedSprite.cpp  Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  Enums.h  ExportDetails.h  RenderComponent.cpp  RenderComponent.h  RenderEngineAPI.cpp  RenderEngineAPI.h  RenderPlugin.cpp  RenderPlugin.h  Rendering.vcxproj  SpriteComponent.cpp  SpriteComponent.h  Window.cpp  Window.h  WindowComponent.cpp  WindowComponent.h
Engine/Plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h
Engine/Plugins/Transform/: CMakeLists.txt  ExportDetails.h  Transform.vcxproj  TransformPlugin.cpp  TransformPlugin.h  Vector.h
Engine/Tests/: CMakeLists.txt  CustomMacros.h  LevelTests.cpp  LoadGTest.cmake  LoggerTests.cpp  PluginLoaderTests.cpp  RunPythonTests.cpp  ScriptLoaderTests.cpp  SharedLibraryTests.cpp
Engine/Tests/TestData/Level/Game/Scripts/: Game.cpp  TestScript.h
Engine/Tests/TestData/RunPython/: TestPythonScript.py
Engine/Tests/TestData/ScriptLoader/Game/Scripts/: Game.h  TestScript.cpp
Engine/Tests/TestData/ScriptLoader/StartWithEmptyDirectory/: _test.txt
Engine/Tests/TestData/SharedLibrary/Source/: CMakeLists.txt  SharedLibraryFile.cpp  SharedLibraryFile.h
Engine/Tools/: Compile.py  Link.py  Setup.py  Tools.pyproj  Tools.sln
Engine/Tools/Linux/: Compile.py  Link.py
Game/: RunGame.bat
Game/Assets/Audio/: _readme_and_license.txt
Game/Assets/Map/: BoxMap.mariomap  World1-1.mariomap
Game/Project/: Game.sln  Game.vcxproj
Game/Scripts/: Background.cpp  Background.h  Block.cpp  Block.h  BrickBlock.cpp  BrickBlock.h  CMakeLists.txt  CoinBlock.cpp  CoinBlock.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Goomba.cpp  Goomba.h  Mario.cpp  Mario.h
Pong/Project/: Project.vcxproj
Pong/Scripts/: AiPlayer.cpp  AiPlayer.h  Ball.cpp  Ball.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  Player.cpp  Player.h
SPH/Project/: SPH.vcxproj
SPH/Scripts/: CMakeLists.txt  Game.cpp  Particle.cpp  Particle.h
Template/Project/: Project.sln  Project.vcxproj
Template/Scripts/: Game.cpp
Test/Scripts/: CMakeLists.txt  Game.cpp  Game.h  Particle.cpp
